Updated portfolio with latest changes

--- a/index.html
+++ b/index.html
@@ -210,6 +210,10 @@
                         <span>Netbeans</span>
                         <span>MySQL</span>
                     </div>
+                    <div class="project__links">
+                        <a href="https://github.com/huzaifaahmed2004/Employee-management "target="_blank" class="project__link"><i class="fab fa-github"></i> Code</a>
+                     
+                    </div>
                    
                 </div>
             </div>
